# spare

./: CMakeLists.txt  README.md
data/test1/: our_params.txt  our_res.ply
data/test2/: our_params.txt  our_res.ply
data/test3/: our_params.txt  our_res.ply  source.ply  target.ply
scripts/: compile.sh  run_demo.sh
src/: NonRigidreg.cpp  NonRigidreg.h  Registration.cpp  Registration.h  main.cpp
src/tools/: Types.h  io_mesh.h  nanoflann.h  nodeSampler.cpp  nodeSampler.h  tools.cpp  tools.h
useful_tools/: estimate_normal.py
